welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:8: error: value update is not a member of java.awt.Color
  if (getCouleurSol()=orange){
      ^RunHalf:8: error: not found: value orange
  if (getCouleurSol()=orange){
                      ^