welcome.lessons.welcome.variables.RunHalf.scala.code
var nbBiscuit=0
var caseOrange=0
while (2*nbBiscuit!=caseOrange+1){
  avance()
  if (estSurBiscuit()){
    nbBiscuit=nbBiscuit+1
  }
  if (getCouleurSol()=orange){
    caseOrange=caseOrange+1
  }
}